--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#51b46d"
+    android:padding="50dp"
+    android:id="@+id/relativeLayout"
     tools:context=".MainActivity">
 
     <TextView
@@ -11,16 +14,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Did you know?"
-      />
+        android:textColor="@color/offWhite"
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/factTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ants stretch when they wake up in the morning"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:textSize="24sp"/>
+        android:text="Ants stretch when they wake up in the morning"
+        android:textColor="@color/white"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/showFactBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/factTextView"
+        android:layout_marginTop="212dp"
+        android:background="@color/white"
+        android:text="Show Another Fun Fact"
+        android:textColor="#51b46d"
+        app:backgroundTint="@color/white" />
 
 </RelativeLayout>
