--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
         android:id="@+id/showFactBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/factTextView"
-        android:layout_marginTop="212dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="68dp"
         android:background="@color/white"
         android:text="Show Another Fun Fact"
         android:textColor="#51b46d"
